Fixed the collapser positioning

--- a/src/styles/3-modules/_expander.scss
+++ b/src/styles/3-modules/_expander.scss
@@ -2,7 +2,6 @@
   background-color: $yellow;
   position: absolute;
   width: 100%;
-  bottom: 0;
 
   color: $red;
 
